--- a/app/fluxdocs-tag/fluxdocs-tag.html
+++ b/app/fluxdocs-tag/fluxdocs-tag.html
@@ -1,16 +1,39 @@
 <div class="fluxDocs">
-    <div ng-repeat="item in $ctrl.docItems" class="row col-lg-12 col-md-12 col-sm-12 col-xs-12 doc">
+    <div class="row col-lg-12 col-md-12 col-sm-12 col-xs-12 doc">
+        <div class="col-lg-1 col-md-1 col-sm-1 col-xs-1 center">
+            Id document
+        </div>
+        <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2 center">
+            Categorie document
+        </div>
+        <div class="col-lg-1 col-md-1 col-sm-1 col-xs-1 center">
+            Data creare
+        </div>
+        <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3 center">
+            Nume autor
+        </div>
+        <div class="col-lg-5 col-md-5 col-sm-5 col-xs-5 center">
+            Actiuni
+        </div>
+    </div>
+    <div ng-repeat="item in $ctrl.docsProcess" class="row col-lg-12 col-md-12 col-sm-12 col-xs-12 doc">
         <div class="col-lg-1 col-md-1 col-sm-1 col-xs-1 center">
             {{item.id}}
         </div>
-        <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 center">
-            {{item.docName}}
+        <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2 center">
+            {{item.tipDocumet}}
+        </div>
+        <div class="col-lg-1 col-md-1 col-sm-1 col-xs-1 center">
+            {{item.data}}
         </div>
         <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3 center">
             {{item.authorName}}
         </div>
         <div class="col-lg-1 col-md-1 col-sm-1 col-xs-1 center">
-            <button class="btn btn-default mormontButton">Aproba</button>
+            <button class="btn btn-default mormontButton">Vizualizeaza</button>
+        </div>
+        <div class="col-lg-1 col-md-1 col-sm-1 col-xs-1 center">
+            <button class="btn btn-default mormontButton" ng-click="$ctrl.approveDoc(item.id, item.versiune, item.tipDocumet)">Aproba</button>
         </div>
         <div class="col-lg-1 col-md-1 col-sm-1 col-xs-1 center">
             <button class="btn btn-default mormontButton">Respinge</button>
