--- a/app/mydocs-tag/mydocs-tag.html
+++ b/app/mydocs-tag/mydocs-tag.html
@@ -10,7 +10,7 @@
             Versiune document
         </div>
         <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2 center">
-            Data cereare document
+            Data creare document
         </div>
         <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3 center">
             Operatii document
