--- a/app/mydocs-tag/mydocs-tag.html
+++ b/app/mydocs-tag/mydocs-tag.html
@@ -29,13 +29,9 @@
         <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2 center">
             {{item.data}}
         </div>
-        <div class="col-lg-1 col-md-1 col-sm-1 col-xs-1 center">
-            <button class="btn btn-default mormontButton"ng-click="$ctrl.editMyDoc(item.id, item.versiune, item.tipDocumet)">Editeaza</button>
-        </div>
-        <div class="col-lg-1 col-md-1 col-sm-1 col-xs-1 center">
+        <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3 center">
+            <button class="btn btn-default mormontButton"ng-click="$ctrl.editMyDoc(item.id, item.versiune, item.tipDocumet)" ng-disabled="item.versiune >= 1">Editeaza</button>
             <button class="btn btn-default mormontButton" ng-click="$ctrl.delete(item.id, item.versiune, item.tipDocumet)">Sterge</button>
-        </div>
-        <div class="col-lg-1 col-md-1 col-sm-1 col-xs-1 center">
             <button class="btn btn-default mormontButton" ng-click="$ctrl.makeFinal(item.id, item.versiune, item.tipDocumet)" ng-disabled="item.versiune >= 1">Finalizare</button>
         </div>
     </div>
