--- a/app/users-tag/users-tag.html
+++ b/app/users-tag/users-tag.html
@@ -3,10 +3,10 @@
         <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2 center">
             Id utilizator
         </div>
-        <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3 center">
+        <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2 center">
             Nume utilizator
         </div>
-        <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2 center">
+        <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3 center">
             Categorie de finantare
         </div>
         <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2 center">
@@ -20,14 +20,14 @@
         <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2 center">
             {{item.id}}
         </div>
-        <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3 center">
+        <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2 center">
             {{item.username}}
         </div>
-        <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2 center">
-            {{item.calitate}}
+        <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3 center">
+            {{$ctrl.mapFunction(item.functie)}}
         </div>
         <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2 center">
-            {{item.autoritate}}
+            {{$ctrl.mapAuthority(item.authority)}}
         </div>
         <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3 center">
             <button class="btn btn-default mormontButton"
