--- a/app/fluxdocs-tag/fluxdocs-tag.html
+++ b/app/fluxdocs-tag/fluxdocs-tag.html
@@ -27,10 +27,9 @@
             {{item.data}}
         </div>
         <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3 center">
-            {{item.authorName}}
+            {{item.ownerName}}
         </div>
         <div class="col-lg-5 col-md-5 col-sm-5 col-xs-5 center">
-            <button class="btn btn-default mormontButton">Vizualizeaza</button>
             <button class="btn btn-default mormontButton" ng-click="$ctrl.approveDoc(item.id, item.versiune, item.tipDocumet)">Aproba</button>
             <button class="btn btn-default mormontButton" ng-click="$ctrl.rejectDoc(item.id, item.versiune, item.tipDocumet)">Respinge</button>
             <button class="btn btn-default mormontButton" ng-click="$ctrl.reviseDoc(item.id, item.versiune, item.tipDocumet)">Trimite spre revizuire</button>
