--- a/app/mydocs-tag/mydocs-tag.html
+++ b/app/mydocs-tag/mydocs-tag.html
@@ -30,9 +30,9 @@
             {{item.data}}
         </div>
         <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3 center">
-            <button class="btn btn-default mormontButton"ng-click="$ctrl.editMyDoc(item.id, item.versiune, item.tipDocumet)" ng-disabled="item.versiune >= 1">Editeaza</button>
+            <button class="btn btn-default mormontButton"ng-click="$ctrl.editMyDoc(item.id, item.versiune, item.tipDocumet)" ng-disabled="$ctrl.isEditable(item.versiune)">Editeaza</button>
             <button class="btn btn-default mormontButton" ng-click="$ctrl.delete(item.id, item.versiune, item.tipDocumet)">Sterge</button>
-            <button class="btn btn-default mormontButton" ng-click="$ctrl.makeFinal(item.id, item.versiune, item.tipDocumet)" ng-disabled="item.versiune >= 1">Finalizare</button>
+            <button class="btn btn-default mormontButton" ng-click="$ctrl.makeFinal(item.id, item.versiune, item.tipDocumet)" ng-disabled="$ctrl.isEditable(item.versiune)">Finalizare</button>
         </div>
     </div>
 </div>
