--- a/app/mydocs-tag/mydocs-tag.html
+++ b/app/mydocs-tag/mydocs-tag.html
@@ -24,7 +24,7 @@
             {{item.tipDocumet}}
         </div>
         <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2 center">
-            {{item.versiune}}
+            {{$ctrl.getCustomVersion(item.versiune)}}
         </div>
         <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2 center">
             {{item.data}}
